--- a/archive.html
+++ b/archive.html
@@ -1,22 +1,23 @@
 ---
-layout: default
+layout: page
+title: Archive
 ---
 
 <div class="well">
 {%for post in site.posts %}
     {% unless post.next %}
-        <h2>{{ post.date | date: '%Y' }}</h2>
+        <h1>{{ post.date | date: '%Y' }}</h2>
         <ul>
     {% else %}
         {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
         {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
         {% if year != nyear %}
             </ul>
-            <h1>{{ post.date | date: '%Y' }}</h1>
+            <h2>{{ post.date | date: '%Y' }}</h1>
             <ul>
         {% endif %}
     {% endunless %}
-    <li><span>{{ post.date | date: "%b %d" }}</span>» <a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
+    <li><span>{{ post.date | date: "%b %d" }}</span>»&nbsp;&nbsp;<a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
 </div>
