--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@ title: Home
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
-
+<a rel="me" href="https://mastodon.cloud/@mletterle" />
